--- a/views/search.ejs
+++ b/views/search.ejs
@@ -15,6 +15,10 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
+
+              <a href="/insert">
+                <p class="mt-3 mb-3">Go to insert Question..</p>
+              </a>
               <div>
                 <%if(data) {%> 
                     <%data.map((obj)=>{%>
