--- a/views/insert.ejs
+++ b/views/insert.ejs
@@ -15,15 +15,15 @@
             <form action="/insert" method="post" class="mt-5">
               <div class="form-group">
                 <label>Insert question</label>
-                <input type="text" class="form-control" name="query">
+                <input type="text" class="form-control" name="query" required>
               </div>
               <div class="form-group">
                   <label>Enter topic</label>
-                  <input type="text" class="form-control" name="topic">
+                  <input type="text" class="form-control" name="topic" required>
               </div>
               <div class="form-group">
                   <label>Enter tags</label>
-                  <input type="text" class="form-control" name="tags">
+                  <input type="text" class="form-control" name="tags" required>
               </div>
               <button type="submit" class="btn btn-primary">Submit</button>
             </form>
