--- a/views/search.ejs
+++ b/views/search.ejs
@@ -11,13 +11,13 @@
             <form method="GET" action="/search" class="mt-5">
                 <div class="form-group">
                   <label>Search Questions</label>
-                  <input type="text" class="form-control" name="search">
+                  <input type="text" class="form-control" name="search" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
 
               <a href="/insert">
-                <p class="mt-3 mb-3">Go to insert Question..</p>
+                <p class="mt-3 mb-3">Go back to insert Question..</p>
               </a>
               <div>
                 <%if(data) {%> 
