--- a/views/search.ejs
+++ b/views/search.ejs
@@ -19,8 +19,13 @@
               <a href="/insert">
                 <p class="mt-3 mb-3">Go back to insert Question..</p>
               </a>
+              <%if(data.length===0) {%>
+              <p style="background-color: rgba(250, 209, 132, 0.877); padding: 3px;">Not found any questions &nbsp; &nbsp;:(
+              </p>
+              <%}%>
               <div>
-                <%if(data) {%> 
+                <%if(data.length!==0){%> 
+                  <p>Expected questions:</p>
                     <%data.map((obj)=>{%>
                         <ul>
                             <li>
