--- a/views/search.ejs
+++ b/views/search.ejs
@@ -11,20 +11,20 @@
             <form method="GET" action="/search" class="mt-5">
                 <div class="form-group">
                   <label>Search Questions</label>
-                  <input type="text" class="form-control" name="search" required>
+                  <input type="text" class="form-control" name="search" required id="search" value="">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary" onclick="f()">Submit</button>
               </form>
 
               <a href="/insert">
                 <p class="mt-3 mb-3">Go back to insert Question..</p>
               </a>
               <%if(data.length===0) {%>
-              <p style="background-color: rgba(250, 209, 132, 0.877); padding: 3px;">Not found any questions &nbsp; &nbsp;:(
+              <p style="background-color: rgba(248, 213, 148, 0.877); padding: 3px;">Not found any questions &nbsp; &nbsp;:(
               </p>
               <%}%>
               <div>
-                <%if(data.length!==0){%> 
+                <%if(data) {%>
                   <p>Expected questions:</p>
                     <%data.map((obj)=>{%>
                         <ul>
@@ -39,5 +39,6 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</body>
+        <script src="/js/search.js"></script>
+      </body>
 </html>
